--- a/css/index.css
+++ b/css/index.css
@@ -1,103 +1,96 @@
-
-
-#banner {	margin-left:-8px;
-			margin-right:px;
-
+#banner { 
+	margin-left: -8px;			
 }
 
-#main {background:#f6f6f6;
-		height:520px;
-		margin-top:-25px;
-		margin-left:-8px;
-		margin-right:-8px;
-
-		}
+#main {
+	height: 520px;
+	margin-top: -25px;
+	margin-left: -8px;
+	margin-right: -8px;
+	background: #f6f6f6;
+	}
 
 #section1 {
-			background:white;
-			display:inline-block;
-			width:320px;
-			height:400px;
-			border-width:1px;
-			margin-top:29px;
-			margin-left:310px;
-
-		}
+	background: white;
+	display: inline-block;
+	width: 320px;
+	height: 400px;
+	border-width: 1px;
+	margin-top: 29px;
+	margin-left: 310px;
+}
 
 #section2 {
-			background:white;
-			display:inline-block;
-			width:320px;
-			height:400px;
-			border-width:1px;
-			
-			margin:0px auto;
+	background: white;
+	display: inline-block;
+	width: 320px;
+	height: 400px;
+	border-width: 1px;
+	margin: 0px auto;
+}
 
-		}
-
-#section3 {
-			background:white;
-			display:inline-block;
-			width:320px;
-			height:400px;
-			border-width:1px;
-			margin-top:29px;
-			margin-right:-310px;
-
-		}
+#section3 {	
+	display: inline-block;
+	width: 320px;
+	height: 400px;
+	border-width: 1px;
+	margin-top: 29px;
+	margin-right: -310px;
+	background: white;
+}
 
 
 #buliding {
-	     	margin-top:10px;
-	     	margin-left:10px;
+	margin-top: 10px;
+	margin-left: 10px;
 }
 
-#section1 p,#section2 p,#section3 p{padding-left:30px;
-		  padding-right:30px;
-		  padding-bottom:25px;
-		   margin-top:15px;
-		   font-size:12px;
-		   line-height:1.7em;}
+#section1 p,
+#section2 p,
+#section3 p {
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 25px;
+	margin-top: 15px;
+	font-size: 12px;
+    line-height: 1.7em;
+}
 
-#sub{background:white;
-	  height:520px;
-	  }
-
-
-#touxiang {margin-left:auto;
-		   margin-right:auto;
-		   width:164px;
-		   position:relative;
-		   top:-150px;
-		   }
+#sub{
+	background:white;
+	height:520px;
+}
 
 
-#subh1 { margin:0px auto;
-		text-align:center;
-	     width:300px;
-	     position:relative;
-	     top:-100px;
-	     
-		  
-		
-		 
-		
+#touxiang {
+	margin-left: auto;
+	margin-right: auto;
+	width: 164px;
+	position: relative;
+	top: -150px;
+}
+
+
+#subh1 { 
+	margin: 0px auto;
+	text-align: center;
+	width: 300px;
+	position: relative;
+	top: -100px;		
 }
 
 #sub #container {
-				position:relative;
-				 top:100px; 
+	position:relative;
+	top:100px; 
 }
 
-#subp {width:600px;
-	   font-size:14px;
-		line-height:1.7em;
-		margin-left:auto;
-		margin-right:auto;
-		position:relative;
-		top:-50px;
-		}
-
-a:link {
-	color:white;
+#subp {
+	width:600px;
+	font-size:14px;
+	line-height:1.7em;
+	margin-left:auto;
+	margin-right:auto;
+	position:relative;
+	top:-50px;
 }
+
