全部页面基本搭建完成

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -48,7 +48,9 @@ body {
  	background: white;
  	border: 1px solid #f6f6f6;
  	border-top: 3px solid white;
- 	padding: 0px 20px;}
+ 	padding: 0px 20px;
+ }
+
 
 .middle { 
 	width: 660px;
