--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,31 @@
 	margin-left: -8px;			
 }
 
+#textbox {
+	width:300px;
+	height:70px;
+	background:white;
+	position:absolute;
+	top:485px;
+	right:290px;
+	background:-webkit-linear-gradient(top,rgba(256, 256, 256, 0.5),rgba(256, 256, 256, 0));
+	padding:10px 10px 30px 10px ;
+	font-size:12px;
+	line-height: 150%;
+}
+
+#textbox h1 {
+	font-size:14px;
+	text-align:right;
+	margin-bottom:12px;
+}
+
+#textbox p {
+	
+	margin-top:0px;
+}
+
+
 #main {
 	height: 520px;
 	margin-top: -25px;
