--- a/css/blog.css
+++ b/css/blog.css
@@ -17,10 +17,10 @@ body { background:#f6f6f6;}
 
 .sub {       
     float: left;        
-    width: 310px;        
+    width: 300px;        
     margin-left: -100%;
     position: relative;        
-    left: -310px;  
+    left: -300px;  
     height: 50px;    
 }   
 .extra {        
@@ -132,7 +132,7 @@ p.info {
 	height: 50px;
 	line-height: 49px;
 	border-bottom: 1px solid black;
-	border-left: 3px solid black;
+	border-left: 3px solid #f6f6f6;
  	padding-left: 15px;
  }
 
@@ -152,10 +152,12 @@ p.info {
 .section5 div {
 	border-bottom: 2px solid #f6f6f6;		
 	height: 33px;
+	background:white;
+	padding-left:10px;
 }
 
 .section5 span {
-	margin-left: 1px;
+	margin-left: 2px;
 }
 
 .section5 #middle {
@@ -242,6 +244,13 @@ span.middle {
 	top: 470px;
 }
 
+.sidebar1,
+.sidebar2,
+.sidebar3,
+.sidebar4 {
+	text-align:center;
+}
+
 .section4 {
 	width: 660px;
 	background:white;
@@ -293,4 +302,30 @@ span.middle {
 .section8 a {
 	color:#000000;
 }
-             
+
+.section3 a {
+	border-left:3px solid black;
+	padding-top:16px;
+	padding-left:0px;
+	padding-bottom:18px;
+	padding-left:20px;
+	position:relative;
+	left:-17px;
+}
+
+.section3 a:hover {
+	border-left:3px solid yellow;
+}
+
+#inputbutton a{
+	position: relative;
+	top: 10px;
+	padding: 10px 15px;
+	border: 1px solid black;
+}
+
+
+#inputbutton a:hover{
+	background: black;
+	color: white;
+}          
